--- a/EDA/eda_h&m_Sandeep.ipynb
+++ b/EDA/eda_h&m_Sandeep.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "79ed959d",
    "metadata": {},
    "outputs": [],
@@ -28,6 +28,9 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Setup\n",
     "sns.set_theme(style=\"whitegrid\")\n",
@@ -571,7 +574,7 @@
    "id": "888d09b8",
    "metadata": {},
    "source": [
-    "articles data have 105542 columns and 25 rows"
+    "Articles data has 105542 rows and 25 columns"
    ]
   },
   {
@@ -736,6 +739,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a1ed4b5",
+   "metadata": {},
+   "source": [
+    "This plot shows the most frequently occurring product types sold by H&M.\n",
+    "\n",
+    "Y-axis: Product Type Name\n",
+    "\n",
+    "X-axis: Frequency (i.e., how many times each product type appears in articles.csv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc2dcf2b",
+   "metadata": {},
+   "source": [
+    "This plot helps you understand which product categories are most stocked or sold, which can feed into:\n",
+    "\n",
+    "- Popularity-based recommendation models\n",
+    "\n",
+    "- Inventory analysis\n",
+    "\n",
+    "- Trend analysis by season "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "4d5ac0e8",
@@ -764,6 +793,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e68774b3",
+   "metadata": {},
+   "source": [
+    "This plot shows the most frequently occurring color groups in the product catalog.\n",
+    "\n",
+    "- X-axis: Count (number of articles in that color group)\n",
+    "\n",
+    "- Y-axis: colour_group_name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7dba013f",
+   "metadata": {},
+   "source": [
+    "- Insights\n",
+    "\n",
+    "This helps uncover customer preferences or product trends — e.g., if black, white, and pink dominate, H&M might double down on those in marketing or stocking."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "9e126b54",
@@ -787,6 +838,29 @@
     "plt.xticks(rotation=45)\n",
     "plt.title('Index Group Distribution')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "057bbfcc",
+   "metadata": {},
+   "source": [
+    "index_group_name typically refers to broader categories like:\n",
+    "\n",
+    "- Ladieswear\n",
+    "- Menswear\n",
+    "- Baby/Children\n",
+    "- Divided (a sub-brand)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90ec4b7f",
+   "metadata": {},
+   "source": [
+    "- Insights\n",
+    "\n",
+    "This plot tells you which index groups dominate the product catalog. For example, if \"Ladieswear\" has the most SKUs, it could explain why female customers have more interactions — useful for gender-segmented recommendations later on."
    ]
   },
   {
@@ -823,6 +897,24 @@
     "plt.title(\"Colour Distribution across Product Types\")\n",
     "plt.ylabel(\"Proportion\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "072703f0",
+   "metadata": {},
+   "source": [
+    "For each of the top 5 product types, it visualizes how the different color groups are distributed proportionally. This helps us identify:\n",
+    "\n",
+    "- Which colors dominate which product types\n",
+    "\n",
+    "- Whether certain products are color-diverse or color-biased\n",
+    "\n",
+    "For example:\n",
+    "\n",
+    "- Users buys backpack with black color. H&M can stock up black color backpack more.\n",
+    "\n",
+    "- Dresses may have more variety and bright shades"
    ]
   },
   {
@@ -1071,6 +1163,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2811954e",
+   "metadata": {},
+   "source": [
+    "Customers data have 1371980 rows and 7 columns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9b141216",
    "metadata": {},
    "source": [
@@ -1118,6 +1218,21 @@
     "# Count missing values\n",
     "missing_values = customers_df.isnull().sum().sort_values(ascending=False)\n",
     "print(\"Missing values:\\n\", missing_values[missing_values > 0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15167946",
+   "metadata": {},
+   "source": [
+    "- FN and Active columns:\n",
+    "    - These are binary indicator fields (1.0 = yes, NaN = no).\n",
+    "    - More than 65% missing → likely safe to assume missing = 0.\n",
+    "\n",
+    "- club_member_status, fashion_news_frequency, age:\n",
+    "    - Only ~1% missing → can either:\n",
+    "       - Drop those rows\n",
+    "       - Impute (e.g., using mode for categorical, median for age)"
    ]
   },
   {
@@ -1190,6 +1305,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a0a4d2b1",
+   "metadata": {},
+   "source": [
+    "- Common values usually are:\n",
+    "    - 'ACTIVE'\n",
+    "    - 'PRE-CREATE' (accounts created but not yet fully registered)\n",
+    "    - 'LEFT CLUB' (past members)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f942427e",
+   "metadata": {},
+   "source": [
+    "- It helps you understand the engagement level of customers based on their loyalty status:\n",
+    "\n",
+    "    - If most are 'ACTIVE', your recommender model will have stronger behavior signals.\n",
+    "    - If many are 'PRE-CREATE', you might want to exclude them from modeling due to cold-start risk.\n",
+    "    - If 'LEFT CLUB' is significant, you could analyze churn trends."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dc1d0d13",
    "metadata": {},
    "source": [
@@ -1221,6 +1359,36 @@
     "plt.ylabel(\"Count\")\n",
     "plt.xticks(rotation=45)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b421790",
+   "metadata": {},
+   "source": [
+    "- Plots a bar chart showing how frequently customers receive H&M’s fashion news (email/notifications)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96dd9a11",
+   "metadata": {},
+   "source": [
+    "- This feature can indicate a customer's interest level or marketing engagement:\n",
+    "\n",
+    "    - 'Regularly': Highly engaged\n",
+    "    - 'Monthly': Less engaged\n",
+    "    - 'NONE', 'None', 'NA': Not interested (possible churn candidates or cold-start users)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae174a38",
+   "metadata": {},
+   "source": [
+    "- Insight for Recommendations:\n",
+    "    - High-frequency readers are better candidates for new arrivals, promotions, or trend-based recommenders.\n",
+    "    - Non-subscribers may need behavior-based models or basic popularity recommenders."
    ]
   },
   {
