verbatim added to EDA Harsh

--- a/EDA/EDA_Harsh.ipynb
+++ b/EDA/EDA_Harsh.ipynb
@@ -63,6 +63,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "67d0a543",
+   "metadata": {},
+   "source": [
+    "# Loading Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "4f6cd6e3",
@@ -86,6 +94,14 @@
     "transactions = pd.read_csv('transactions_train.csv')\n",
     "transactions.to_parquet('transactions.parquet')\n",
     "transactions_parquet = pd.read_parquet('transactions.parquet')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "968af1c5",
+   "metadata": {},
+   "source": [
+    "### Converting the Data time string to Datetime datatype"
    ]
   },
   {
@@ -118,6 +134,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e1771d4",
+   "metadata": {},
+   "source": [
+    "### Creating copies of dataset to run the analysis on"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "8661b299",
@@ -127,6 +151,16 @@
     "tx = transactions\n",
     "arts = articles\n",
     "cust = customers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28f5aa0d",
+   "metadata": {},
+   "source": [
+    "Below analysis shows the amount of transactions across the timeframe provided\n",
+    "\n",
+    "We can observe few spikes and troughs, but plotting each day on x-axis provides very erratic view"
    ]
   },
   {
@@ -163,6 +197,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4a0d0d44",
+   "metadata": {},
+   "source": [
+    "In order to smooth out the view we can take average over each week\n",
+    "\n",
+    "Observations:\n",
+    "- Typical days: **30 K–80 K** purchases  \n",
+    "- Occasional spikes: **100 K–200 K**, aligning with end-of-month or promotional/new-drop events."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "7dd22897",
@@ -192,6 +238,14 @@
     "plt.legend()\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28fe7480",
+   "metadata": {},
+   "source": [
+    "Splitting the transactions dataset by Day of the week displays **Saturday** as the most popular day of shopping while **Sunday and Monday** being the least"
    ]
   },
   {
@@ -232,6 +286,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1ff4b4b2",
+   "metadata": {},
+   "source": [
+    "In order to observe trends in months across the years, we use a line graph to understand the purchase patterns of the customers\n",
+    "\n",
+    "Following are the observations from the graph:\n",
+    "\n",
+    "- **Long-term trend**: Mid-year peaks (Jul 2019 & Jul 2020) and winter troughs (Dec–Jan).  \n",
+    "- **Weekly cycle**: Saturdays highest (~48 K avg), Sundays/Mondays lowest (~38–39 K avg).  \n",
+    "- **Monthly cycle**: Summer surges (Jun–Jul), winter lulls (Dec–Jan), plus a sharp Apr–May 2020 rebound (post-lockdown)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "e88fcf76",
@@ -265,6 +333,18 @@
     "plt.ylabel(\"Purchases\")\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9515f08f",
+   "metadata": {},
+   "source": [
+    "Using `statsmodel` to generate seasonal views, following are the oberservations:\n",
+    "\n",
+    "- **Trend component** captures summer bumps and winter dips.  \n",
+    "- **Seasonal component** shows a stable 7-day cycle (~±5 K swings).  \n",
+    "- **Residuals** isolate spikes—resid > mean + 3·σ flags “promo/new-drop” days."
    ]
   },
   {
@@ -314,6 +394,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d4b71834",
+   "metadata": {},
+   "source": [
+    "Looking for patterns in Product Type over months and years, we get the following obersvations:\n",
+    "\n",
+    "- **Sweaters**: Winter-only demand; near-zero summer sales.  \n",
+    "- **Dresses**: Peaks in spring/summer (Jul 2019 & Jul 2020).  \n",
+    "- **Trousers**: Steady year-round with mild mid-year uplift.  \n",
+    "- **T-shirts & Tops**: Balanced all year, modest summer bumps."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "de83ee0e",
@@ -347,6 +440,17 @@
     "            .size().unstack().fillna(0))\n",
     "top5 = weekly.sum().nlargest(5).index\n",
     "weekly[top5].plot()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "311e0b7b",
+   "metadata": {},
+   "source": [
+    "To understand how many items are possible to be purchased by a customer during a single session, provides insights into maximum size of recommendations to be made\n",
+    "\n",
+    "We can see:\n",
+    "- Most “baskets” contain **1–10** items; long tail up to hundreds.  "
    ]
   },
   {
@@ -385,6 +489,17 @@
     "plt.title(\"Basket‐Size Distribution\")\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fecf324",
+   "metadata": {},
+   "source": [
+    "Trying to understand the recency of customers, we observe:\n",
+    "\n",
+    "- ~70 % of repeat buys within **1–2 days**; very few beyond 30 days.  \n",
+    "- Strong case for heavy recency weighting."
    ]
   },
   {
@@ -517,6 +632,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "21bc323a",
+   "metadata": {},
+   "source": [
+    "Recommendation can be tailored based on purchase history or items in the cart of the user"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "f31c221f",
@@ -586,6 +709,17 @@
     "    type_i = id_to_type.get(i, \"Unknown\")\n",
     "    type_j = id_to_type.get(j, \"Unknown\")\n",
     "    print(f\"{i} ({type_i}) → {j} ({type_j}): {cnt}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c6463f0",
+   "metadata": {},
+   "source": [
+    "Recommending a product that has shown high growth directly displays the popularity of the product in the market\n",
+    "\n",
+    "- Top-growing SKUs over the last 8 weeks include **Dresses**, **Sweaters**, **Trousers**, **Cardigans** with growth up to **467×**.  \n",
+    "- These summer-season items are prime for freshness boosts."
    ]
   },
   {
@@ -683,6 +817,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3bd4927",
+   "metadata": {},
+   "source": [
+    "Looking for a trend in category preference by each customer, we can figure out:\n",
+    "\n",
+    "- ~75 % of customers buy from **≤ 5** distinct product types; a small segment explores > 20.  \n",
+    "- Adjust exploration vs. exploitation based on user diversity."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "9858f646",
@@ -720,6 +865,16 @@
     "plt.title(\"Category Diversity per User\")\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a8a97d9",
+   "metadata": {},
+   "source": [
+    "Price sensitiviy of a customer will help in provided an attractive recommendation tailored to each customer, we can make the below observations:\n",
+    "\n",
+    "- High-spenders’ avg price ≈ 0.046 vs. low-spenders ≈ 0.016 (∼ 3× difference)."
    ]
   },
   {
